# jsonbourne

./: .coverage  .coveragerc  .editorconfig  .gitattributes  .gitignore  Makefile  README.ipynb  README.md  jsonbourne.py  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: pythonpackage.yml
jsonbourne/: __init__.py  _import.py  _json.py  _version.py  core.py  json.py  main.py  pydantic.py  types.py
jsonbourne/jsonlib/: _json_stdlib.py  _orjson.py  _rapidjson.py  base.py
src/jsonbourne/: _version.py  pydantic.py
src/jsonbourne/jsonlib/: _orjson.py  base.py
tests/: test_json_base_model.py  test_json_obj.py  test_json_obj_attrs.py  test_json_obj_pydantic.py  test_jsonbourne.py  test_jsonbourne_libs.py  test_jsonbourne_orjson.py  test_jsonbourne_rapidjson.py  test_jsonbourne_ujson.py  test_version.py
