[tool.poetry]
name = "jsonbourne"
version = "0.1.1"
description = "Import the best JSON lib"
authors = ["jesse <jesse@dgi.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
