[tool.poetry]
name = "jsonbourne"
version = "0.2.0"
description = "Import the best JSON lib"
license = "MIT"
authors = ["jesse <jesse@dgi.com>"]
packages = [
    { include = "jsonbourne", from = "." }
]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
